OPA/Constraints/deny-default-ns_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNamespace
metadata:
  name: deny-default-ns
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment", "Pod", "ConfigMap", "Service", "Secrets"]
