OPA/Constraints/must-have-label-tier_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-tier
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment", "Pod", "Service", "ConfigMap", "Secrets"]
   # namespaces: ["app"]
  parameters:
    labels: ["tier"]
